	  Pekka Riikonen.
	* Option to suppress the disconnect notification when using
	  the autoreconnect plugin (Christopher (siege) O'Brien)
	* Added support for dragging buddies from the buddy list into the
	  Add Buddy Pounce dialog.
	* Pounce notification now includes time (Mike Lundy)
	* The history plugin now shows history for chats in addition to IMs
	* Menu item to view log (Tom Samstag)

	Bug Fixes:
	* Compiles again with gcc 2.96 (Ignacio J. Elia)
	* Gtk2.0 compatibility fixes (Tim Ringenbach)
	* Massive rewrite of MSN support, which should fix a number of issues
	  and make errors easier to interpret. (Felipe Contreras)
	* Gadu-Gadu updates (Andrew Wellington)
	* Dialogs opened from a conversation window are now closed when
	  the conversation window is closed, preventing a crash (Kevin Stange)
	* Updated and standardized blist signals (Gary Kramlich)
	* More doxygen fixes (Jonathan Champ)
	* Copy/paste encoding fixes (Joe Marcus Clarke)
	* IRC disconnect crash fix (Luciano Miguel Ferreira Rocha)
	* Novell prpl works on big endian machines (Novell)
	* Zephyr works on 64 bit machines (Arun A Tharuvai)
	* Print Gadu-Gadu messages to the debug window instead of the console
	* New tabs should scroll correctly again (Tim Ringenbach)

	Preference Changes:
	* Added a "none" smiley theme to replace the "Show graphical
	  smileys" option
	* Removed "Show logins in window," default to yes
	* Removed "Send URLs as links," default to yes (in protocols that
	  support HTML)
	* Removed "Show URLs as links," default to yes

version 0.77 (04/22/2004):
	New Features:
	* The System Log returns (Ka-Hing Cheung)
	* Added a conversation-drag-ended signal (Etan Reisner)
	* Reorganized and cleaned up the MSN protocol plugin (Felipe Contreras)
	* Added the -c option to specify location of the .gaim directory, removed
	  the outdated -f option that no longer had any effect (Daniel Atallah)
	* Novell GroupWise protocol support added (Novell)
	* WYSIWYG improvements (Tim Ringenbach)